--- a/main.html
+++ b/main.html
@@ -104,19 +104,19 @@
             <div class="w-5/6 md:w-full flex flex-col md:flex-row self-center justify-evenly">
                 <div class="flex flex-col m-1 md:m-0 p-1 md:p-16 rounded-lg text-black bg-pink-50 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)]">
                     <h3 class="py-1 md:py-3 font-semibold text-sm md:text-xl">Progate Indonesia</h3>
-                    <img class="w-40 self-center md:w-72 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/Progate.png" alt="Progate Indonesia">
+                    <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/proget-anim.png" alt="Progate Indonesia">
                     <p class="text-xs md:text-base">Frontend Developer</p>
                     <p class="text-pink-800 text-xs md:text-base font-semibold">2020</p>
                 </div>
                 <div class="flex flex-col m-1 md:m-0 p-1 md:p-16 rounded-lg text-black bg-pink-50 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)]">
                     <h3 class="py-1 md:py-3 font-semibold text-sm md:text-xl">Universitas Gadjah Mada</h3>
-                    <img class="w-40 self-center md:w-72 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/balairung.jpg" alt="UGM">
+                    <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/ugm.png" alt="UGM">
                     <p class="text-xs md:text-base">Bachelor of Applied Linguistics</p>
                     <p class="text-pink-800 text-xs md:text-base font-semibold">2023</p>
                 </div>
                 <div class="flex flex-col m-1 md:m-0 p-1 md:p-16 rounded-lg text-black bg-pink-50 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)]">
                     <h3 class="py-1 md:py-3 font-semibold text-sm md:text-xl">RevoU</h3>
-                    <img class="w-40 self-center md:w-72 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/revou.png" alt="revou">
+                    <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg transition delay-100 duration-300 ease-in-out hover:-translate-y-1 hover:scale-110" src="assets/revou-anime.png" alt="revou">
                     <p class="text-xs md:text-base">Full-stack Software Engineering</p>
                     <p class="text-pink-800 text-xs md:text-base font-semibold">2025</p>
                 </div>
