--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
             <div class="py-1 md:py-8 max-w-7xl mx-auto">
                 <h2 class="uppercase font-bold md:font-extrabold text-pink-50 text-lg md:text-3xl text-center">Education</h2>
             </div>
-            <div class="w-5/6 md:w-full flex flex-col md:flex-row self-center space-x-2 justify-center max-w-7xl mx-auto">
-                <div class="w-1/4 flex flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] -rotate-6 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
+            <div class="w-4/5 md:w-full flex flex-col md:flex-row self-center space-x-2 justify-center max-w-7xl mx-auto py-6 md:py-2">
+                <div class="w-4/5 md:w-1/4 flex flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg items-center self-center lg:items-start lg:self-start text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] -rotate-6 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
                     <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg" src="assets/proget-anim.png" alt="Progate Indonesia">
                     <h3 class="py-1 md:py-3 font-bold text-sm md:text-xl">Progate Indonesia</h3>
                     <p class="text-xs md:text-base">Frontend Developer</p>
                     <p class="text-pink-400 text-xs md:text-base font-semibold">2020</p>
-                    <p class="text-xs md:text-base py-3">Learned the core concepts of web development, focusing on how code shapes user experiences. Through HTML, CSS, and JavaScript, I built a strong foundation in frontend fundamentals and web structure.</p>
+                    <p class="hidden md:flex text-xs md:text-base py-3">Learned the core concepts of web development, focusing on how code shapes user experiences. Through HTML, CSS, and JavaScript, I built a strong foundation in frontend fundamentals and web structure.</p>
                 </div>
-                <div class="flex w-1/4 flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] -rotate-2 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
+                <div class="flex w-4/5 md:w-1/4 flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg items-center self-center lg:items-start lg:self-start text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] -rotate-2 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
                     <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg" src="assets/ugm.png" alt="UGM">
                     <h3 class="py-1 md:py-3 font-bold text-sm md:text-xl">Universitas Gadjah Mada</h3>
                     <p class="text-xs md:text-base">Bachelor of Applied Linguistics</p>
                     <p class="text-pink-400 text-xs md:text-base font-semibold">2023</p>
-                    <p class="text-xs md:text-base py-3">Explored how to connect technology with people through communication and marketing. My studies covered public relations, digital marketing, copywriting, and English for business purposes to craft impactful messages.</p>
+                    <p class="hidden md:flex text-xs md:text-base py-3">Explored how to connect technology with people through communication and marketing. My studies covered public relations, digital marketing, copywriting, and English for business purposes to craft impactful messages.</p>
                 </div>
-                <div class="flex w-1/4 flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] rotate-6 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
+                <div class="flex w-4/5 md:w-1/4 flex-col m-1 md:m-0 p-1 md:p-5 rounded-lg items-center self-center lg:items-start lg:self-start text-red-50 border bg-red-950 hover:drop-shadow-[0_10px_10px_rgba(246,232,234,1)] rotate-6 hover:rotate-0 transition delay-100 duration-300 ease-in-out">
                     <img class="w-40 self-center md:w-72 lg:w-80 mb-0 md:mb-2 rounded-lg" src="assets/revou-anime.png" alt="revou">
                     <h3 class="py-1 md:py-3 font-bold text-sm md:text-xl">RevoU</h3>
                     <p class="text-xs md:text-base">Full-stack Software Engineering</p>
                     <p class="text-pink-400 text-xs md:text-base font-semibold">2025</p>
-                    <p class="text-xs md:text-base py-3">Developed skills in both frontend and backend programming to create complete web applications. I also gained hands-on experience with databases, unit testing, and web performance optimization for reliable and efficient sites.</p>
+                    <p class="hidden md:flex text-xs md:text-base py-3">Developed skills in both frontend and backend programming to create complete web applications. I also gained hands-on experience with databases, unit testing, and web performance optimization for reliable and efficient sites.</p>
                 </div>
             </div>
         </section>
