--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main>
         <!-- Opening -->
-        <section class="flex flex-col lg:flex-row pl-4 md:pl-44 h-screen justify-center md:justify-start max-w-7xl mx-auto">
+        <section class="w-5/6 flex flex-col lg:flex-row pl-4 md:pl-44 h-screen justify-center md:justify-start max-w-7xl mx-auto">
             <div class="flex order-2 md:order-1 flex-col self-center w-full lg:w-3/5">
                 <h1 class="uppercase font-extrabold text-black text-base md:text-3xl tracking-[.20em] py-2">Hi! I'm <b class="text-pink-700">Herlinda Apriani</b></h1>
 
@@ -127,7 +127,7 @@
         </section>
 
         <!-- Skills -->
-        <section id="skills" class="h-screen text-center place-content-center max-w-7xl mx-auto">
+        <section id="skills" class="w-5/6 h-screen text-center place-content-center max-w-7xl mx-auto">
             <div class="py-1 md:py-8">
                 <h2 class="uppercase font-bold md:font-extrabold text-pink-950 text-lg md:text-3xl">Skills</h2>
             </div>
@@ -169,7 +169,7 @@
 
         <!-- Projects -->
         <section id="projects" class="w-full h-screen flex flex-col bg-red-950">
-            <div class="flex flex-col place-items-center justify-center max-w-7xl mx-auto pt-2 md:pt-20">
+            <div class="flex flex-col place-items-center justify-center max-w-7xl mx-auto pt-20 md:pt-20">
                 <h2 class="uppercase font-bold lg:font-extrabold text-pink-50 text-lg lg:text-3xl">Projects</h2>          
                 <div class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm">
                     <img class="w-48 md:w-96 rounded-md" src="assets/fuwa.png" alt="project1">
@@ -219,7 +219,7 @@
         </section>
 
         <!-- Contact Me -->
-        <section id="contact" class="container flex flex-col md:flex-row py-8 md:py-20 h-screen max-w-7xl mx-auto">
+        <section id="contact" class="w-5/6 container flex flex-col md:flex-row py-8 md:py-20 h-screen max-w-7xl mx-auto">
             <div class="flex flex-col w-5/6 md:w-2/5 max-h-max mt-1 md:mt-6 mx-auto transition ease-in p-2 md:p-6 self-center">
                 <div class="w-full bg-white shadow rounded-lg text-center self-center justify-center py-6">
                     <h2 class="font-bold md:font-extrabold text-pink-950 text-base md:text-2xl">Contact Me</h2>
