--- a/index.html
+++ b/index.html
@@ -171,49 +171,105 @@
         <section id="projects" class="w-full h-screen flex flex-col bg-red-950">
             <div class="flex flex-col place-items-center justify-center max-w-7xl mx-auto pt-20 md:pt-20">
                 <h2 class="uppercase font-bold lg:font-extrabold text-pink-50 text-lg lg:text-3xl">Projects</h2>          
-                <div class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm">
-                    <img class="w-48 md:w-96 rounded-md" src="assets/fuwa.png" alt="project1">
-                    <div class="flex flex-col mx-1 lg:mx-6">
-                        <h3 class="pt-2 font-bold text-sm lg:text-xl">Fuwa Touch</h3>
-                        <p class="text-xs lg:text-base mt-0 lg:mt-3">Developed a web-based application for nail art and eyelash services to simplify appointment management, addressing complexities of traditional booking systems. It enabled independent artists and small beauty businesses to efficiently manage bookings through an intuitive interface showcasing services, availability, and user-friendly navigation.</p>
-                        <div class="w-full flex flex-row pt-6 space-x-2">
-                            <p class="text-xs md:text-base">Built with: </p>
-                            <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
-                            <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
-                            <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
-                            <img class="w-4 md:w-8" src="assets/gsap.png" alt="logo GSAP">
-                            <img class="w-4 md:w-8" src="assets/nest.png" alt="logo Nest.js">
-                            <img class="w-4 md:w-8" src="assets/prisma.png" alt="logo Prisma">
-                            <img class="w-4 md:w-8" src="assets/PostgresSQL.png" alt="logo PostgreSQL">
-                            <img class="w-4 md:w-8" src="assets/Swagger.png" alt="logo Swagger UI">
+                <div class="relative flex flex-row items-center justify-center w-full">
+                    <button id="prev-projects" type="button" aria-label="Previous projects" class="absolute left-20 z-10 text-pink-50 text-2xl"><i class="fa-solid fa-chevron-left fa-2x hover:scale-110 transition-all duration-300 ease-in-out"></i></button>
+                    <div class="flex flex-col items-center w-full">
+                        
+                        <!-- Project 1 -->
+                        <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
+                            <img class="w-48 md:w-96 rounded-md" src="assets/fuwa.png" alt="project1">
+                            <div class="flex flex-col mx-1 lg:mx-6">
+                                <h3 class="pt-2 font-bold text-sm lg:text-xl">Fuwa Touch</h3>
+                                <p class="text-xs lg:text-base mt-0 lg:mt-3">Developed a web-based application for nail art and eyelash services to simplify appointment management, addressing complexities of traditional booking systems. It enabled independent artists and small beauty businesses to efficiently manage bookings through an intuitive interface showcasing services, availability, and user-friendly navigation.</p>
+                                <div class="w-full flex flex-row pt-6 space-x-2">
+                                    <p class="text-xs md:text-base">Built with: </p>
+                                    <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
+                                    <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
+                                    <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
+                                    <img class="w-4 md:w-8" src="assets/gsap.png" alt="logo GSAP">
+                                    <img class="w-4 md:w-8" src="assets/nest.png" alt="logo Nest.js">
+                                    <img class="w-4 md:w-8" src="assets/prisma.png" alt="logo Prisma">
+                                    <img class="w-4 md:w-8" src="assets/PostgresSQL.png" alt="logo PostgreSQL">
+                                    <img class="w-4 md:w-8" src="assets/Swagger.png" alt="logo Swagger UI">
+                                </div>
+                                <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
+                                    <div class="flex flex-row justify-between">
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/final-project-fe-herlindaapr.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://final-project-fe-herlindaapr.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
-                            <div class="flex flex-row justify-between">
-                                <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/final-project-fe-herlindaapr.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
-                                <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://final-project-fe-herlindaapr.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+
+                        <!-- Project 2 -->
+                        <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
+                            <img class="w-48 lg:w-96 rounded-md" src="assets/mockup-store.png" alt="project2">
+                            <div class="flex flex-col mx-1 lg:mx-6">
+                                <h3 class="pt-2 font-bold text-sm lg:text-xl">Miku Mockup Store</h3>
+                                <p class="text-xs lg:text-base mt-0 lg:mt-3">Built an interactive e-commerce mock-up using Next.js and Tailwind CSS with data powered by the Platzi Fake API. Designed an attractive and user-friendly interface, and integrated RBAC using Next Auth to provide distinct features and dashboards for different user roles.</p>
+                                <div class="w-full flex flex-row pt-6 space-x-2">
+                                    <p class="text-xs md:text-base">Built with: </p>
+                                    <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
+                                    <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
+                                    <img class="w-4 md:w-8" src="assets/TypeScript.png" alt="logo TypeScript">
+                                    <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
+                                </div>
+                                <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
+                                    <div class="flex flex-row justify-between">
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/miku-mockup-store.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://miku-mockup-store.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Project 3 -->
+                        <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
+                            <img class="w-48 md:w-96 rounded-md" src="assets/hiring.png" alt="project3">
+                            <div class="flex flex-col mx-1 lg:mx-6">
+                                <h3 class="pt-2 font-bold text-sm lg:text-xl">Hiring Management System</h3>
+                                <p class="text-xs lg:text-base mt-0 lg:mt-3">A job hiring platform where admins can create and manage job openings from a dedicated dashboard.
+                                    Candidates can browse jobs, submit applications, and have their submissions tied to specific positions.
+                                    All applicant data is persisted in localStorage, supported by interactive and custom UI components.</p>
+                                <div class="w-full flex flex-row pt-6 space-x-2">
+                                    <p class="text-xs md:text-base">Built with: </p>
+                                    <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
+                                    <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
+                                    <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
+                                </div>
+                                <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
+                                    <div class="flex flex-row justify-between">
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/hiring-management-app.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://hiring-management-app-hzkb.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Project 4 -->
+                        <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
+                            <img class="w-48 md:w-96 rounded-md" src="assets/jumping.png" alt="project4">
+                            <div class="flex flex-col mx-1 lg:mx-6">
+                                <h3 class="pt-2 font-bold text-sm lg:text-xl">Miku Jumping Game</h3>
+                                <p class="text-xs lg:text-base mt-0 lg:mt-3">Flappy Bird–inspired mini-game featuring pixel-art Hatsune Miku.
+                                    Players jump through obstacles and try to stay in the air as long as possible.
+                                    A light, fun, and fast-paced arcade experience designed for casual play.</p>
+                                <div class="w-full flex flex-row pt-6 space-x-2">
+                                    <p class="text-xs md:text-base">Built with: </p>
+                                    <img class="w-4 md:w-8" src="assets/html.png" alt="logo HTML">
+                                    <img class="w-4 md:w-8" src="assets/css.png" alt="logo CSS">
+                                    <img class="w-4 md:w-8" src="assets/js.png" alt="logo JavaScript">
+                                </div>
+                                <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
+                                    <div class="flex flex-row justify-between">
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/jumping-miku-game.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://jumping-miku.netlify.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm">
-                    <img class="w-48 lg:w-96 rounded-md" src="assets/mockup-store.png" alt="project2">
-                    <div class="flex flex-col mx-1 lg:mx-6">
-                        <h3 class="pt-2 font-bold text-sm lg:text-xl">Miku Mockup Store</h3>
-                        <p class="text-xs lg:text-base mt-0 lg:mt-3">Built an interactive e-commerce mock-up using Next.js and Tailwind CSS with data powered by the Platzi Fake API. Designed an attractive and user-friendly interface, and integrated RBAC using Next Auth to provide distinct features and dashboards for different user roles.</p>
-                        <div class="w-full flex flex-row pt-6 space-x-2">
-                            <p class="text-xs md:text-base">Built with: </p>
-                            <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
-                            <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
-                            <img class="w-4 md:w-8" src="assets/TypeScript.png" alt="logo TypeScript">
-                            <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
-                        </div>
-                        <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
-                            <div class="flex flex-row justify-between">
-                                <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/miku-mockup-store.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
-                                <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://miku-mockup-store.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
-                            </div>
-                        </div>
-                    </div>
+                    <button id="next-projects" type="button" aria-label="Next projects" class="absolute right-20 z-10 text-pink-50 text-2xl hover:scale-110 transition-all duration-300 ease-in-out"><i class="fa-solid fa-chevron-right fa-2x"></i></button>
                 </div>
             </div>
         </section>
