add: new project showcase

--- a/index.html
+++ b/index.html
@@ -203,7 +203,30 @@
 
                         <!-- Project 2 -->
                         <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
-                            <img class="w-48 lg:w-96 rounded-md" src="assets/mockup-store.png" alt="project2">
+                            <img class="w-48 lg:w-96 rounded-md" src="assets/we-rent-hd.png" alt="project2">
+                            <div class="flex flex-col mx-1 lg:mx-6">
+                                <h3 class="pt-2 font-bold text-sm lg:text-xl">WeRent (PRD Implementation)</h3>
+                                <p class="text-xs lg:text-base mt-0 lg:mt-3">A collaborative mobile app product built to enable users to add and update reviews based on user stories defined in the Product Requirements Document (PRD).
+                                    The application emphasizes smooth data handling and reliable performance throughout development.</p>
+                                <div class="w-full flex flex-row pt-6 space-x-2">
+                                    <p class="text-xs md:text-base">Built with: </p>
+                                    <img class="w-4 md:w-8" src="assets/next.png" alt="logo Next.js">
+                                    <img class="w-4 md:w-8" src="assets/react.png" alt="logo React">
+                                    <img class="w-4 md:w-8" src="assets/TypeScript.png" alt="logo TypeScript">
+                                    <img class="w-4 md:w-8" src="assets/Tailwind CSS.png" alt="logo Tailwind CSS">
+                                </div>
+                                <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
+                                    <div class="flex flex-row justify-between">
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/A-WeRent-fe.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://a-we-rent-fe.vercel.app/product">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Project 3 -->
+                        <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
+                            <img class="w-48 lg:w-96 rounded-md" src="assets/mockup-store.png" alt="project3">
                             <div class="flex flex-col mx-1 lg:mx-6">
                                 <h3 class="pt-2 font-bold text-sm lg:text-xl">Miku Mockup Store</h3>
                                 <p class="text-xs lg:text-base mt-0 lg:mt-3">Built an interactive e-commerce mock-up using Next.js and Tailwind CSS with data powered by the Platzi Fake API. Designed an attractive and user-friendly interface, and integrated RBAC using Next Auth to provide distinct features and dashboards for different user roles.</p>
@@ -223,9 +246,9 @@
                             </div>
                         </div>
 
-                        <!-- Project 3 -->
+                        <!-- Project 4 -->
                         <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
-                            <img class="w-48 md:w-96 rounded-md" src="assets/hiring.png" alt="project3">
+                            <img class="w-48 md:w-96 rounded-md" src="assets/hiring.png" alt="project4">
                             <div class="flex flex-col mx-1 lg:mx-6">
                                 <h3 class="pt-2 font-bold text-sm lg:text-xl">Hiring Management System</h3>
                                 <p class="text-xs lg:text-base mt-0 lg:mt-3">A job hiring platform where admins can create and manage job openings from a dedicated dashboard.
@@ -246,9 +269,9 @@
                             </div>
                         </div>
 
-                        <!-- Project 4 -->
+                        <!-- Project 5 -->
                         <div data-project-card class="flex flex-col lg:flex-row w-4/5 lg:w-3/4 items-center lg:items-start bg-pink-50 text-red-950 p-3 lg:p-6 m-1 lg:m-5 rounded-md drop-shadow-sm relative">
-                            <img class="w-48 md:w-96 rounded-md" src="assets/jumping.png" alt="project4">
+                            <img class="w-48 md:w-96 rounded-md" src="assets/jumping.png" alt="project5">
                             <div class="flex flex-col mx-1 lg:mx-6">
                                 <h3 class="pt-2 font-bold text-sm lg:text-xl">Miku Jumping Game</h3>
                                 <p class="text-xs lg:text-base mt-0 lg:mt-3">Flappy Bird–inspired mini-game featuring pixel-art Hatsune Miku.
