update: CV docs link

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
             <!-- Hamburger Menu Button -->
             <div id="hamburger" class="block absolute z-50 top-3 right-1 lg:hidden transition-transform duration-300 cursor-pointer">
-                <button id="menu-btn" class="text-pink-900 focus:outline-none">
-                    <i id="menu-icon" class="fa-solid fa-bars text-2xl"></i>
+                <button id="menu-btn" aria-label="Open navigation menu" class="text-pink-900 focus:outline-none">
+                    <i id="menu-icon" aria-hidden="true" class="fa-solid fa-bars text-2xl"></i>
                 </button>
             </div>
 
@@ -72,7 +72,7 @@
 
                 <p class="w-full lg:w-3/4 text-sm lg:text-base">I bridge the gap between creativity and functionality. I thrive on solving complex problems and turning ideas into reality through clean, efficient code. <b class="text-red-900">Constantly learning and evolving</b> with the latest technologies.</p>
                 <div class="flex space-x-2 py-6">
-                    <a href="https://drive.google.com/file/d/1wWxdCXERy9ll844uUiKL-gypzg99YAOr/view?usp=sharing" class="flex flex-row items-center space-x-2 bg-pink-700 text-white px-2 py-1 rounded-md hover:bg-pink-900">
+                    <a href="https://docs.google.com/document/d/1VthAtLoeNhYocbupDRHFO4Wlq1GTL898/edit?usp=sharing&ouid=112456256895479994112&rtpof=true&sd=true" class="flex flex-row items-center space-x-2 bg-pink-700 text-white px-2 py-1 rounded-md hover:bg-pink-900">
                         <i class="fa-solid fa-download"></i>
                         <p>Download CV</p>
                     </a>
@@ -194,8 +194,8 @@
                                 </div>
                                 <div class="absolute rounded-md inset-0 flex flex-col justify-end bg-gradient-to-t from-red-950 via-transparent to-transparent opacity-0 hover:opacity-100 transition-opacity duration-300">
                                     <div class="flex flex-row justify-between">
-                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/final-project-fe-herlindaapr.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
-                                        <a class="text-pink-50 mx-auto pb-2 md:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://final-project-fe-herlindaapr.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://github.com/herlindaapr/final-project-fe-herlindaapr.git">Github Repo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
+                                        <a class="text-pink-50 mx-auto pb-2 lg:mb-4 font-medium lg:font-semibold hover:underline hover:underline-offset-[5px]" href="https://final-project-fe-herlindaapr.vercel.app/">Live Demo<i class="ml-2 fa-solid fa-arrow-right-long"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -316,10 +316,10 @@
                 <div class="flex flex-col w-full bg-white shadow rounded-lg text-center self-center justify-center my-6 py-2 lg:my-10 lg:py-4">
                     <p class="text-red-900 text-xs md:text-sm">Made with 💖 © 2025. All rights reserved. </p>
                     <div class="flex flex-row self-center space-x-6 text-red-900 py-1 md:py-2">
-                        <a href="https://github.com/herlindaapr"><i class="fab fa-github fa-lg text-base md:text-xl lg:text-3xl"></i></a>
-                        <a href="https://www.linkedin.com/in/herlindaapr"><i class="fab fa-linkedin fa-lg text-base md:text-xl lg:text-3xl"></i></a>
-                        <a href="https://www.instagram.com/herlindaapr"><i class="fab fa-instagram fa-lg text-base md:text-xl lg:text-3xl"></i></a>
-                        <a href="https://wa.me/6281390488967"><i class="fa-brands fa-whatsapp text-base md:text-xl lg:text-3xl"></i></a>
+                        <a href="https://github.com/herlindaapr" aria-label="GitHub profile"><i class="fab fa-github fa-lg text-base md:text-xl lg:text-3xl" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/herlindaapr" aria-label="LinkedIn profile"><i class="fab fa-linkedin fa-lg text-base md:text-xl lg:text-3xl" aria-hidden="true"></i></a>
+                        <a href="https://www.instagram.com/herlindaapr" aria-label="Instagram profile"><i class="fab fa-instagram fa-lg text-base md:text-xl lg:text-3xl" aria-hidden="true"></i></a>
+                        <a href="https://wa.me/6281390488967" aria-label="WhatsApp contact"><i class="fa-brands fa-whatsapp text-base md:text-xl lg:text-3xl" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
